# project

./: .coverage  .env  .gitignore  README.md  calc.py  mypy.ini  pyproject.toml
src/: .gitignore  decorators.py  external_api.py  file_reader.py  generators.py  main.py  masks.py  operations.py  processing.py  utils.py  widget.py
tests/: .gitignore  test_calc.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests/tests/: teat_processing.py  test_processing.py
