[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Morozov",email = "ulb9@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
